# mcgdb

./: .gitignore  INSTALL  Makefile.am  Makefile.in  NOTES  README.md  TODO  configure  configure.ac  configure.py  configure.sh  defines-mcgdb.gdb  env.nix  install.py  mcgdb  mcgdb.in  mcgdb.py  requirements.txt  startup.gdb  startup.gdb.in
distribution/: README.md  do_checkinstall.sh  mcgdb.spec
distribution/pacur/: runpacur.sh
distribution/pacur/pacur/: PKGBUILD
env/: env.nix  mcgdb.nix  pysigset.nix  pyte.nix  python2_dbg.nix
mc/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
mc/contrib/: Makefile.in
mc/doc/: Makefile.in
mc/doc/hints/: Makefile.in
mc/doc/hints/l10n/: Makefile.in
mc/doc/hlp/: Makefile.in
mc/doc/hlp/es/: Makefile.in
mc/doc/hlp/hu/: Makefile.in
mc/doc/hlp/it/: Makefile.in
mc/doc/man/: Makefile.in
mc/intl/: plural.c
mc/lib/: Makefile.in  fileloc.h  keybind.c  keybind.h
mc/lib/event/: Makefile.in
mc/lib/filehighlight/: Makefile.in
mc/lib/mcconfig/: Makefile.in
mc/lib/search/: Makefile.in
mc/lib/skin/: Makefile.in
mc/lib/strutil/: Makefile.in
mc/lib/tty/: Makefile.in  key.c  key.h  tty-slang.c
mc/lib/vfs/: Makefile.in
mc/lib/widget/: Makefile.am  Makefile.in  block-widget.c  block-widget.h  dialog.c  dialog.h  groupbox.c  input.c  mcgdb_asm_widget.c  mcgdb_asm_widget.h  mcgdb_aux_widget.c  mcgdb_aux_widget.h  mcgdb_lvarswidget.c  mcgdb_lvarswidget.h  quick.c  quick.h  wblock-button.c  wblock-button.h  wblock-checkbox.c  wblock-checkbox.h  wblock-frame.c  wblock-frame.h  wblock-input.c  wblock-input.h  wblock-label.c  wblock-label.h  wblock-main.c  wblock-main.h  wblock-select.c  wblock-select.h  wblock.c  wblock.h  widget-common.h  wtable.c  wtable.h  wtools.c
mc/lib/widget/block-widget/: block-widget.c  block-widget.h  wb-checkbox.c  wb-checkbox.h  wb-frame.c  wb-frame.h
mc/misc/: Makefile.in  mc.default.keymap
mc/misc/ext.d/: Makefile.in
mc/misc/macros.d/: Makefile.in
mc/misc/skins/: Makefile.in
mc/misc/syntax/: Makefile.in
mc/po/: az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  de_CH.gmo  de_CH.po  el.gmo  el.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fa.gmo  fa.po  fi.gmo  fi.po  fr.gmo  fr.po  fr_CA.gmo  fr_CA.po  gl.gmo  gl.po  hr.gmo  hr.po  (+63 more)
mc/src/: Makefile.am  Makefile.in  args.c  keybind-defaults.c  keybind-defaults.h  main.c  mcgdb-bp-widget.c  mcgdb-bp-widget.h  mcgdb-bp.c  mcgdb-bp.h  mcgdb-select.c  mcgdb-select.h  mcgdb.c  mcgdb.h  setup.c
mc/src/consaver/: Makefile.in
mc/src/diffviewer/: Makefile.in  search.c  ydiff.c
mc/src/editor/: Makefile.in  edit-impl.h  edit.c  edit.h  editcmd.c  editcmd_dialogs.c  editdraw.c  editmenu.c  editoptions.c  editwidget.c  editwidget.h
mc/src/filemanager/: Makefile.in  boxes.c  filegui.c  hotlist.c  midnight.c  panel.c
mc/src/man2hlp/: Makefile.in
mc/src/subshell/: Makefile.in
mc/src/vfs/: Makefile.in
mc/src/vfs/cpio/: Makefile.in
mc/src/vfs/extfs/: Makefile.in
mc/src/vfs/extfs/helpers/: Makefile.in
mc/src/vfs/fish/: Makefile.in
mc/src/vfs/fish/helpers/: Makefile.in
mc/src/vfs/ftpfs/: Makefile.in
mc/src/vfs/local/: Makefile.in
mc/src/vfs/sfs/: Makefile.in
mc/src/vfs/sftpfs/: Makefile.in
mc/src/vfs/smbfs/: Makefile.in
mc/src/vfs/tar/: Makefile.in
mc/src/vfs/undelfs/: Makefile.in
mc/src/viewer/: Makefile.in  dialogs.c
mc/tests/: Makefile.in
mc/tests/lib/: Makefile.in
mc/tests/src/: Makefile.in
pacur/: PKGBUILD  pacur.json  runpacur.sh
pacur/pacur/: PKGBUILD
python/: mcgdb.in.py  mcgdb.py
python/mcgdb/: __init__.py  asmwin.py  auxwin.py  basewin.py  commands.py  common.py  gdb2.py  mcgdb.py  srcwin.py  valuetochunks.py
tests/: Makefile  Makefile.am  Makefile.in  README.md  common.py  compare.py  file.c  iostub.py  main  main.c  main.cc  mcgdb_play.py  mcgdb_record.py  myclass.cpp  nframes  nrun.py  regexes_common.py  requirements.txt  runtest.py  screenshot.py  todo  variables-actions.txt
tests/testcases/variables/: file.c  file.h  head.h  main.cc
tests/testcases/variables/testdir/: file.h
tests/testdir/: file.c
tests/testsuite/encoding/src/: Makefile  encoding.cc
tests/testsuite/srcwin.bps/: Makefile
tests/testsuite/srcwin.bps/src/: main.cc
tests/testsuite/srcwin.common/: Makefile  record.orig.play.xz  record.orig.py  regexes.py
tests/testsuite/srcwin.common/src/: main.cc
tests/testsuite/srcwin.frame-shell-cmd/: record.orig.py
tests/testsuite/srcwin.frame-shell-cmd/src/: main.cc
tests/testsuite/srcwin_common/: Makefile  record.orig.py  regexes.py
tests/testsuite/srcwin_common/src/: funcs.cc
tests/testsuite/srcwin_frame-shell-cmd/: record.orig.play.xz
tests/testsuite/variables/: record.play.xz  record.py  regexes.py  runtest.py
tests/testsuite/variables.expand_change_null_step/: record.orig.play.xz  regexes.py
tests/testsuite/variables.expand_change_null_step/src/: main.cc
tests/testsuite/variables.incompl_struct/: record.orig.play.xz  regexes.py
tests/testsuite/variables.int/: Makefile  record.orig.play.xz  record.orig.py  regexes.py
tests/testsuite/variables.void_star_const/: main.cc  record.orig.play.xz  record.orig.py
tests/testsuite/variables.wait_change_bug_1/: record.orig.play.xz  regexes.py  runtest.py  wait_change_bug_1.play.xz  wait_change_bug_1.py
tests/testsuite/variables.wait_change_bug_1/src/: main.cc
tests/testsuite/variables/src/: Makefile  main.cc  myclass.h  nframes.c
tests/testsuite/variables/src/testdir/: file.c
tests/testsuite/variables_expand_change_null_step/: Makefile  record.orig.play.xz  record.orig.py  regexes.py
tests/testsuite/variables_incompl_struct/: Makefile  record.orig.py
tests/testsuite/variables_incompl_struct/src/: main.cc
tests/testsuite/variables_int/: Makefile  record.orig.play.xz  record.orig.py
tests/testsuite/variables_int/src/: main.cc
tests/testsuite/variables_void_star_const/src/: main.cc
tests/testsuite/variables_wait_change_bug_1/: regexes.py
tmp/: Makefile  dwarf.cc  visitor.cc
(+16 files in other folders)
