
noinst_LTLIBRARIES = libmcwidget.la

libmcwidget_la_SOURCES = \
	button.c button.h \
	buttonbar.c buttonbar.h \
	check.c check.h \
	dialog.c dialog.h \
	dialog-switch.c dialog-switch.h \
	gauge.c gauge.h \
	groupbox.c groupbox.h \
	hline.c hline.h \
	history.c history.h \
	input.c input.h \
	input_complete.c input_complete.h \
	listbox-window.c listbox-window.h \
	listbox.c listbox.h \
	label.c label.h \
	menu.c menu.h \
	mouse.c mouse.h \
	quick.c quick.h \
	radio.c radio.h \
	widget-common.c widget-common.h \
	wtools.c wtools.h \
	mcgdb_aux_widget.c mcgdb_aux_widget.h \
	mcgdb_asm_widget.c mcgdb_asm_widget.h \
	wtable.c wtable.h \
	wblock.c wblock.h \
	wblock-main.c wblock-main.h \
	wblock-checkbox.h wblock-checkbox.c \
	wblock-label.h wblock-label.c \
	wblock-button.h wblock-button.c \
	wblock-frame.h wblock-frame.c \
	wblock-input.h wblock-input.c \
	wblock-select.h wblock-select.c


AM_CPPFLAGS = -I$(top_srcdir) $(GLIB_CFLAGS)
